--- a/6.5.0/apm-springcloud-demo/kser-apm-eureka.yml
+++ b/6.5.0/apm-springcloud-demo/kser-apm-eureka.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: apm-eureka
-  namespace: skywalking
+  namespace: demo
   labels:
     service: apm-eureka
 spec:
