--- a/6.5.0/apm-springcloud-demo/kser-apm-item.yml
+++ b/6.5.0/apm-springcloud-demo/kser-apm-item.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: apm-item
-  namespace: skywalking
+  namespace: demo
   labels:
     service: apm-item
 spec:
